Page About Created

--- a/src/app/About/style.module.css
+++ b/src/app/About/style.module.css
@@ -1,7 +1,7 @@
 .container{
 display: flex;
 flex-direction: column;
-height: 60vh;
+flex: 1;
 padding: 0 100px;
 justify-content: center;
 align-items: center ;
