--- a/src/app/About/style.module.css
+++ b/src/app/About/style.module.css
@@ -1,9 +1,13 @@
+.h1{
+  font-size: 2rem;
+}
+
 .container{
 display: flex;
 flex-direction: column;
 flex: 1;
 padding: 0 100px;
-justify-content: center;
+margin-top: 5rem;
 align-items: center ;
 }
 
