--- a/src/app/Projects/style.module.css
+++ b/src/app/Projects/style.module.css
@@ -1,4 +1,5 @@
 .container{
+  width: 100%;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -6,8 +7,8 @@
   align-items: center;
   gap: 0.5rem;
 
-  padding: 0 100px;
 
+  padding: 0 200px;
 }
 
 .content{
