--- a/src/components/Project/style.module.css
+++ b/src/components/Project/style.module.css
@@ -1,7 +1,11 @@
 .container{
-  max-width: 800px;
+  max-width: 500px;
   background-color: #000;
   position: relative;
+
+  border: solid #000 3px;
+  border-bottom: none;
+
 }
 
 .container:hover a div p{
@@ -21,11 +25,6 @@
 
   text-align: center;
   display: none;
-}
-
-.image{
-  width: 100%;
-  height: 100%;
 }
 
 .image:hover{
