--- a/src/app/About/style.module.css
+++ b/src/app/About/style.module.css
@@ -1,4 +1,4 @@
-.h1{
+.title{
   font-size: 2rem;
 }
 
@@ -7,7 +7,7 @@ display: flex;
 flex-direction: column;
 flex: 1;
 padding: 0 100px;
-margin-top: 5rem;
+margin-top: 2rem;
 align-items: center ;
 }
 
