--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -1,5 +1,33 @@
 .container{
   display: flex;
   flex-direction: column;
+  align-items: center;
   flex: 1;
+  margin: 2rem 100px 0;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.title{
+  font-size: 2rem;
+}
+
+.content p {
+  text-align: center;
+}
+
+.images{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  gap: 2rem;
+}
+
+.images Image{
+  max-width: 300px
 }
